--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     },
     "dependencies": {
         "koa": "2.0.0",
+        "koa-multer": "1.0.2",
         "koa-bodyparser": "3.2.0",
         "koa-router": "7.0.0",
         "nunjucks": "2.4.2",
