--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
         "mz": "2.4.0",
         "sequelize": "3.24.1",
         "mysql": "2.11.1",
+        "bcryptjs": "2.4.3",
+        "jsonwebtoken": "7.4.1",
+        "koa-jwt": "3.2.2",
         "winston": "2.3.1"
     }
 }
