--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
         "url": "https://github.com/shamic/node-eb.git"
     },
     "dependencies": {
-        "koa": "2.0.0",
+        "koa": "2.2.0",
         "koa-multer": "1.0.2",
         "koa-bodyparser": "3.2.0",
-        "koa-router": "7.0.0",
+        "koa-router": "7.2.0",
         "nunjucks": "2.4.2",
         "mime": "1.3.4",
         "mz": "2.4.0",
@@ -25,6 +25,7 @@
         "bcryptjs": "2.4.3",
         "jsonwebtoken": "7.4.1",
         "koa-jwt": "3.2.2",
+        "koa-send": "^4.1.0",
         "winston": "2.3.1"
     }
 }
